--- a/.github/workflows/update-supply.yml
+++ b/.github/workflows/update-supply.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 * * * *'  # Runs every hour
   workflow_dispatch:
 
+permissions:
+  contents: write  # ✅ Enables push access for GITHUB_TOKEN
+
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -31,5 +34,7 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add total.txt circulating.txt max.txt
-          git commit -m "Auto-update supply values"
+          git diff --cached --quiet || git commit -m "Auto-update supply values"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
