--- a/.github/workflows/update-supply.yml
+++ b/.github/workflows/update-supply.yml
@@ -2,7 +2,9 @@ name: Update Supply Data
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs every hour
+    - cron: '0 9 * * *'  # runs every day at 9:00 AM UTC (2:00 AM PDT, UTC−7)
+
+
   workflow_dispatch:
 
 permissions:
